Fix loading screen not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@ a {
 #load-overlay {
     display: inline-block;
     background-color: #333;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
